--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "config": "3.3.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.2.1"
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.5.0",
+    "mongoose": "^6.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
